[package]
name = "pic_to_github"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
base64 = "0.22.1"
reqwest = { version = "0.12.8", features = ["json", "gzip", "native-tls-alpn","blocking"] }
serde_json = "1.0.132"
short-uuid = "0.1.3"
toml = "0.8.19"
serde = { version = "1.0.213", features = ["derive"] }
home = "0.5.9"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
