[package]
name = "pic_to_github"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["json", "gzip", "blocking"] }
serde_json = "1.0.137"
short-uuid = "0.1.4"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
home = "0.5.11"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
