[package]
name = "pic_to_github"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["json", "gzip", "blocking"] }
serde_json = "1.0.139"
short-uuid = "0.2.0"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
home = "0.5.11"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
